--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "botkit": "^0.4.9",
+    "html-entities": "^1.2.0",
+    "mout": "^1.0.0",
     "slack": "^8.1.2"
   }
 }
