Added html entity decoder for better support of slack strings

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botkit": "^0.4.9",
+    "entities": "^1.1.1",
     "html-entities": "^1.2.0",
     "mout": "^1.0.0",
     "slack": "^8.1.2"
